# slc-hunger-risk

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/clean/: fao-baseline-data-2016-2018.csv  food_expenditure_deficits.csv  monthly-export-rice-2016-2021.csv  monthly-import-poultry_meat-2016-2021.csv  monthly-import-soybean_oil-2016-2021.csv  monthly-import-wheat-2016-2021.csv
data/processed/: ABS_Sur_CPI.csv  ABS_Sur_TransportPriceIndex_data.csv  CBVS_exchange_rates.csv  ILO_data_sector_empl.csv  comtrade-data-partner-Suriname-A.csv  comtrade-data-partner-Suriname-M.csv  comtrade-data-reporter-Suriname-A.csv  usda-data-Suriname.csv
data/raw/: rain_adm1_data (1).csv
notebooks/: Crop production.ipynb  MicroData_HH_income_2020.ipynb  covid_suriname.ipynb  rain_suriname.ipynb
plots/: imported_food_kcal.py
scripts/: MicroData_HH_income_2020.ipynb  analyze_comtrade_data.py  analyze_microdata.py  download_comtrade_data.py  download_data.py  plot_cpi.py  plot_cpi_and_exchange_rate.py  plot_food_expenditure_deficits.py  plot_top_food_items.py
scripts/R/: cpi_plot.R  exchange_rates_plot.R  food_infl_plot.R  fpi_plot.R  ppi_plot.R  share_empl_agriculture_plot.R  tpi_plot.R  world_food_prices_plot.R
src/slc_hunger_risk/: comtrade.py  config.py  generate_baseline_data.py  microdata.py
tests/: test_slc_hunger_risk.py
