[tool.poetry]
name = "slc-hunger-risk"
version = "0.1.0"
description = ""
authors = ["Patryk Kubiczek <patryk.kubiczek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.26.0"
icecream = "^2.1.1"
ipython = "^7.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
